Feat: Connect all pages and fix navigation issues